# ptd-hook-orig

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AndroidManifest.xml  CMakeLists.txt  PTD.apk.sha256  README.md  apktool-out-audit.txt  apktool-output-hash.txt  apply-mod.sh  build-apk.sh  build.gradle  build.sh  check-input-apk.sh  default.nix  generate-responses.sh  gradle.properties  greclipse.properties  il2cppinspector-dev-shell.nix  install-responses.sh  install.sh  launch-activity.sh  local.dist.properties  prepare-build.sh  prepare-response-generator.sh  settings.gradle  shell.nix
acd/: CMakeLists.txt  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ptdhook/: CustomArrayAdapter.java  NotificationService.java  SettingsActivity.java
app/src/main/res/values/: strings.xml  themes.xml
baksmali/: default.nix
hook/: CMakeLists.txt  android-storage-path.cpp  android-storage-path.h  android-utils.cpp  android-utils.h  api-mod.cpp  api-mod.h  config.cpp  config.h  disable-connect-hook.cpp  disable-connect-hook.h  dlopen-hook.cpp  dlopen-hook.h  game-initializer-mod.cpp  game-initializer-mod.h  jni-utils.cpp  jni-utils.h  local-data-mod.cpp  local-data-mod.h  main.cpp  md-mod.cpp  md-mod.h  response-loader.cpp  response-loader.h  start-quest-response.cpp  start-quest-response.h  string-utils.h  time-utils.cpp  time-utils.h  ui-mod.cpp  ui-mod.h  utils.h
hook/appdata/: il2cpp-functions.h
hook/framework/: helpers.cpp  helpers.h  il2cpp-appdata.h  il2cpp-init.cpp  pch-il2cpp.h
hook/frida-gum-devkit/: frida-gum.h
hook/responses/: equipment-avatar-response.cpp  equipment-avatar-response.h  login-response.cpp  login-response.h  response-utils.cpp  response-utils.h  result-quest-response.cpp  result-quest-response.h  retire-quest-response.cpp  retire-quest-response.h  set-favorite-character-response.cpp  set-favorite-character-response.h  set-idol-class-response.cpp  set-idol-class-response.h  set-team-response.cpp  set-team-response.h  start-lesson-response.cpp  start-lesson-response.h  start-quest-response.cpp  start-quest-response.h  stored-response.cpp  stored-response.h
il2cppinspector/: default.nix  deps.nix  nix-build-fix.patch
nix/: sources.json
ptd-tool/: default.nix  gomod2nix.toml
res/values/: public.xml  styles.xml
responses-input/: ContinueQuest.json  Gacha.json  GetInformation.json  GetNativeToken.json  GetPresentList.json  GetRankingListUrl.json  GetRankingPoint.json  GetServerTime.json  GetSupporter.json  GetVoteEventPoint.json  OpenScreen.json  ResultLesson.json  ResultQuest.json  ResultScenario.json  ResultSubScenario.json  SetTeam.json
smali/com/hook/: HookLoader.smali
smali/com/unity3d/player/: UnityPlayerActivity.smali
